--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -1,5 +1,5 @@
 .container_searchbar {
-  background-color: #090d7a;
+  background-color: midnightblue;
   padding: 10px;
   margin-bottom: 20px;
 }
